feat(PCON-7): Real backend config, restart policy, CL-012.1 to CL-016
- docker-compose: restart: no for Platform Control Panel management
- CL-016: PCON-7 real Neo4j/Qdrant config (all-MiniLM-L6-v2)
- CL-015: Tiered network architecture docker-compose
- CL-014: SonarCloud .scannerwork ignore
- CL-013: Security hotspot SAFE comments
- CL-012.1: Domain taxonomy update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
-    restart: unless-stopped
+    restart: "no"  # Manual control via Platform Control Panel
     networks:
       - ai-platform-network
       - data-network
